--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.1.9",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0",
+    "caniuse-lite": "^1.0.30001230",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
